[package]
name = "runtime_registry"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = ">=1.0.45"
wasmer = { git = "https://github.com/exerum/wasmer", branch = "wasm32-wasi-beta" }
dirs = ">=4.0.0"
bytes = ">=1.1.0"
reqwest = { version = "0.11.6", features = ["blocking"] }
